Fix wrapping style

--- a/styles/extensions.css
+++ b/styles/extensions.css
@@ -8,13 +8,14 @@
 }
 
 .extensionsbox {
+  flex: 1 1 100px;
+  max-width: 50%;
+  min-width: 400px;
   margin: 15px;
   padding-left: 25px;
   padding-right: 25px;
   background-color: white;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.25);
-  width: 50%;
-  min-width: 400px;
   height: 100%;
   text-align: center;
 }
